# serializer version: 1
# name: test_inventory[tests/fixtures/camera-example.yaml]
  '''
  ---
  areas:
  - name: Backyard
    id: backyard
  devices:
  - name: Outdoor Camera
    id: outdoor_camera
    area: backyard
    info:
      model: 2.4.1
      manufacturer: null
      sw_version: null
  entities:
  - name: Outdoor Camera Motion
    id: binary_sensor.outdoor_camera_motion
    area: backyard
    device: outdoor_camera
    state: 'off'
    attributes:
      device_class: motion
  - name: Outdoor Camera Person
    id: binary_sensor.outdoor_camera_person
    area: backyard
    device: outdoor_camera
    state: 'off'
    attributes:
      device_class: occupancy
  - name: Outdoor Camera Sound
    id: binary_sensor.outdoor_camera_sound
    area: backyard
    device: outdoor_camera
    state: 'off'
    attributes:
      device_class: sound
  
  '''
# ---
# name: test_inventory[tests/fixtures/camera-idle.yaml]
  '''
  ---
  areas:
  - name: Backyard
    id: backyard
  devices:
  - name: Outdoor Camera
    id: outdoor_camera
    area: backyard
    info:
      model: 2.4.1
      manufacturer: null
      sw_version: null
  entities:
  - name: Outdoor Camera Motion
    id: binary_sensor.outdoor_camera_motion
    area: backyard
    device: outdoor_camera
    state: 'off'
    attributes:
      device_class: motion
  - name: Outdoor Camera Person
    id: binary_sensor.outdoor_camera_person
    area: backyard
    device: outdoor_camera
    state: 'off'
    attributes:
      device_class: occupancy
  - name: Outdoor Camera Sound
    id: binary_sensor.outdoor_camera_sound
    area: backyard
    device: outdoor_camera
    state: 'off'
    attributes:
      device_class: sound
  
  '''
# ---
# name: test_inventory[tests/fixtures/camera-motion-detected.yaml]
  '''
  ---
  areas:
  - name: Backyard
    id: backyard
  devices:
  - name: Outdoor Camera
    id: outdoor_camera
    area: backyard
    info:
      model: 2.4.1
      manufacturer: null
      sw_version: null
  entities:
  - name: Outdoor Camera Motion
    id: binary_sensor.outdoor_camera_motion
    area: backyard
    device: outdoor_camera
    state: 'on'
    attributes:
      device_class: motion
  - name: Outdoor Camera Person
    id: binary_sensor.outdoor_camera_person
    area: backyard
    device: outdoor_camera
    state: 'off'
    attributes:
      device_class: occupancy
  - name: Outdoor Camera Sound
    id: binary_sensor.outdoor_camera_sound
    area: backyard
    device: outdoor_camera
    state: 'off'
    attributes:
      device_class: sound
  
  '''
# ---
# name: test_inventory[tests/fixtures/camera-person-detected.yaml]
  '''
  ---
  areas:
  - name: Backyard
    id: backyard
  devices:
  - name: Outdoor Camera
    id: outdoor_camera
    area: backyard
    info:
      model: 2.4.1
      manufacturer: null
      sw_version: null
  entities:
  - name: Outdoor Camera Motion
    id: binary_sensor.outdoor_camera_motion
    area: backyard
    device: outdoor_camera
    state: 'off'
    attributes:
      device_class: motion
  - name: Outdoor Camera Person
    id: binary_sensor.outdoor_camera_person
    area: backyard
    device: outdoor_camera
    state: 'on'
    attributes:
      device_class: occupancy
  - name: Outdoor Camera Sound
    id: binary_sensor.outdoor_camera_sound
    area: backyard
    device: outdoor_camera
    state: 'off'
    attributes:
      device_class: sound
  
  '''
# ---
# name: test_inventory[tests/fixtures/camera-sound-detected.yaml]
  '''
  ---
  areas:
  - name: Backyard
    id: backyard
  devices:
  - name: Outdoor Camera
    id: outdoor_camera
    area: backyard
    info:
      model: 2.4.1
      manufacturer: null
      sw_version: null
  entities:
  - name: Outdoor Camera Motion
    id: binary_sensor.outdoor_camera_motion
    area: backyard
    device: outdoor_camera
    state: 'off'
    attributes:
      device_class: motion
  - name: Outdoor Camera Person
    id: binary_sensor.outdoor_camera_person
    area: backyard
    device: outdoor_camera
    state: 'off'
    attributes:
      device_class: occupancy
  - name: Outdoor Camera Sound
    id: binary_sensor.outdoor_camera_sound
    area: backyard
    device: outdoor_camera
    state: 'on'
    attributes:
      device_class: sound
  
  '''
# ---
# name: test_inventory[tests/fixtures/door-sensor-example.yaml]
  '''
  ---
  areas:
  - name: Front door
    id: front_door
  devices:
  - name: Front Door Sensor
    id: front_door_sensor
    area: front_door
    info:
      model: Aqara
      manufacturer: null
      sw_version: null
  entities:
  - name: Front Door Sensor
    id: binary_sensor.front_door_sensor
    area: front_door
    device: front_door_sensor
    state: 'off'
    attributes:
      device_class: door
  - name: Front Door Sensor Battery
    id: binary_sensor.front_door_sensor_battery
    area: front_door
    device: front_door_sensor
    state: 'off'
    attributes:
      device_class: battery
  - name: Front Door Sensor Battery
    id: sensor.front_door_sensor_battery
    area: front_door
    device: front_door_sensor
    state: '90'
    attributes:
      state_class: measurement
      unit_of_measurement: '%'
      device_class: battery
  
  '''
# ---
# name: test_inventory[tests/fixtures/fan-example.yaml]
  '''
  ---
  areas:
  - name: Kitchen
    id: kitchen
  devices:
  - name: Counter Fan
    id: counter_fan
    area: kitchen
  entities:
  - name: Counter Fan
    id: fan.counter_fan
    area: kitchen
    device: counter_fan
    state: 'off'
    attributes:
      oscillating: false
      percentage: '0'
      percentage_step: 1.0
      supported_features:
      - fan.FanEntityFeature.SET_SPEED
      - fan.FanEntityFeature.OSCILLATE
  
  '''
# ---
# name: test_inventory[tests/fixtures/fan-off.yaml]
  '''
  ---
  areas:
  - name: Kitchen
    id: kitchen
  devices:
  - name: Counter Fan
    id: counter_fan
    area: kitchen
  entities:
  - name: Counter Fan
    id: fan.counter_fan
    area: kitchen
    device: counter_fan
    state: 'off'
    attributes:
      oscillating: false
      percentage: '0'
      percentage_step: 1.0
      supported_features:
      - fan.FanEntityFeature.SET_SPEED
      - fan.FanEntityFeature.OSCILLATE
  
  '''
# ---
# name: test_inventory[tests/fixtures/fan-on.yaml]
  '''
  ---
  areas:
  - name: Kitchen
    id: kitchen
  devices:
  - name: Counter Fan
    id: counter_fan
    area: kitchen
  entities:
  - name: Counter Fan
    id: fan.counter_fan
    area: kitchen
    device: counter_fan
    state: 'on'
    attributes:
      oscillating: false
      percentage: '100'
      percentage_step: 1.0
      supported_features:
      - fan.FanEntityFeature.SET_SPEED
      - fan.FanEntityFeature.OSCILLATE
  
  '''
# ---
# name: test_inventory[tests/fixtures/fan-oscillating.yaml]
  '''
  ---
  areas:
  - name: Kitchen
    id: kitchen
  devices:
  - name: Counter Fan
    id: counter_fan
    area: kitchen
  entities:
  - name: Counter Fan
    id: fan.counter_fan
    area: kitchen
    device: counter_fan
    state: 'on'
    attributes:
      oscillating: true
      percentage: '100'
      percentage_step: 1.0
      supported_features:
      - fan.FanEntityFeature.SET_SPEED
      - fan.FanEntityFeature.OSCILLATE
  
  '''
# ---
# name: test_inventory[tests/fixtures/garage-door-example.yaml]
  '''
  ---
  areas:
  - name: Front Yard
    id: front_yard
  devices:
  - name: Garage Door
    id: garage_door
    area: front_yard
  entities:
  - name: Garage Door
    id: cover.garage_door
    area: front_yard
    device: garage_door
    state: closed
    attributes:
      current_position: '0'
      device_class: garage
      supported_features:
      - cover.CoverEntityFeature.OPEN
      - cover.CoverEntityFeature.CLOSE
  - name: Garage Door
    id: light.garage_door
    area: front_yard
    device: garage_door
    state: 'off'
    attributes:
      supported_color_modes:
      - onoff
      supported_features: []
  
  '''
# ---
# name: test_inventory[tests/fixtures/gate-example.yaml]
  '''
  ---
  areas:
  - name: Front Yard
    id: front_yard
  devices:
  - name: Driveway Gate
    id: driveway_gate
    area: front_yard
  entities:
  - name: Driveway Gate
    id: cover.driveway_gate
    area: front_yard
    device: driveway_gate
    state: closed
    attributes:
      current_position: '0'
      device_class: gate
      supported_features:
      - cover.CoverEntityFeature.OPEN
      - cover.CoverEntityFeature.CLOSE
  
  '''
# ---
# name: test_inventory[tests/fixtures/heat-pump-example.yaml]
  '''
  ---
  areas:
  - name: Family room
    id: family_room
  devices:
  - name: Family Room
    id: family_room
    area: family_room
    info:
      model: 1.0.0
      manufacturer: null
      sw_version: null
  entities:
  - name: Family Room
    id: climate.family_room
    area: family_room
    device: family_room
    state: 'off'
    attributes:
      hvac_modes:
      - heat
      - 'off'
      min_temp: 7.0
      max_temp: 35.0
      fan_modes:
      - low
      - high
      - 'off'
      current_temperature: 15.6
      hvac_action: 'off'
      supported_features:
      - climate.ClimateEntityFeature.FAN_MODE
      - climate.ClimateEntityFeature.TURN_OFF
      - climate.ClimateEntityFeature.TURN_ON
  - name: Family Room Temperature
    id: sensor.family_room_temperature
    area: family_room
    device: family_room
    state: '60'
    attributes:
      state_class: measurement
      unit_of_measurement: "\xB0C"
      device_class: temperature
  
  '''
# ---
# name: test_inventory[tests/fixtures/hvac-cooling.yaml]
  '''
  ---
  areas:
  - name: Family room
    id: family_room
  devices:
  - name: Family Room
    id: family_room
    area: family_room
    info:
      model: 1.0.0
      manufacturer: null
      sw_version: null
  entities:
  - name: Family Room
    id: climate.family_room
    area: family_room
    device: family_room
    state: cool
    attributes:
      hvac_modes:
      - 'off'
      - cool
      - heat
      - auto
      min_temp: '7'
      max_temp: '35'
      fan_modes:
      - low
      - high
      - 'off'
      current_temperature: '25'
      hvac_action: cooling
      supported_features:
      - climate.ClimateEntityFeature.TARGET_TEMPERATURE_RANGE
      - climate.ClimateEntityFeature.FAN_MODE
      - climate.ClimateEntityFeature.TURN_OFF
      - climate.ClimateEntityFeature.TURN_ON
  - name: Family Room Temperature
    id: sensor.family_room_temperature
    area: family_room
    device: family_room
    state: '25'
    attributes:
      state_class: measurement
      unit_of_measurement: "\xB0C"
      device_class: temperature
  - name: Family Room Humidity
    id: sensor.family_room_humidity
    area: family_room
    device: family_room
    state: '45'
    attributes:
      state_class: measurement
      unit_of_measurement: '%'
      device_class: humidity
  
  '''
# ---
# name: test_inventory[tests/fixtures/hvac-example.yaml]
  '''
  ---
  areas:
  - name: Family room
    id: family_room
  devices:
  - name: Family Room
    id: family_room
    area: family_room
    info:
      model: 1.0.0
      manufacturer: null
      sw_version: null
  entities:
  - name: Family Room
    id: climate.family_room
    area: family_room
    device: family_room
    state: 'off'
    attributes:
      hvac_modes:
      - 'off'
      - cool
      - heat
      - auto
      min_temp: 7.0
      max_temp: 35.0
      fan_modes:
      - low
      - high
      - 'off'
      current_temperature: 16.7
      hvac_action: 'off'
      supported_features:
      - climate.ClimateEntityFeature.TARGET_TEMPERATURE_RANGE
      - climate.ClimateEntityFeature.FAN_MODE
      - climate.ClimateEntityFeature.TURN_OFF
      - climate.ClimateEntityFeature.TURN_ON
  - name: Family Room Temperature
    id: sensor.family_room_temperature
    area: family_room
    device: family_room
    state: '17'
    attributes:
      state_class: measurement
      unit_of_measurement: "\xB0C"
      device_class: temperature
  - name: Family Room Humidity
    id: sensor.family_room_humidity
    area: family_room
    device: family_room
    state: '45'
    attributes:
      state_class: measurement
      unit_of_measurement: '%'
      device_class: humidity
  
  '''
# ---
# name: test_inventory[tests/fixtures/hvac-off.yaml]
  '''
  ---
  areas:
  - name: Family room
    id: family_room
  devices:
  - name: Family Room
    id: family_room
    area: family_room
    info:
      model: 1.0.0
      manufacturer: null
      sw_version: null
  entities:
  - name: Family Room
    id: climate.family_room
    area: family_room
    device: family_room
    state: 'off'
    attributes:
      hvac_modes:
      - 'off'
      - cool
      - heat
      - auto
      min_temp: '7'
      max_temp: '35'
      fan_modes:
      - low
      - high
      - 'off'
      current_temperature: '22'
      hvac_action: 'off'
      supported_features:
      - climate.ClimateEntityFeature.TARGET_TEMPERATURE_RANGE
      - climate.ClimateEntityFeature.FAN_MODE
      - climate.ClimateEntityFeature.TURN_OFF
      - climate.ClimateEntityFeature.TURN_ON
  - name: Family Room Temperature
    id: sensor.family_room_temperature
    area: family_room
    device: family_room
    state: '22'
    attributes:
      state_class: measurement
      unit_of_measurement: "\xB0C"
      device_class: temperature
  - name: Family Room Humidity
    id: sensor.family_room_humidity
    area: family_room
    device: family_room
    state: '45'
    attributes:
      state_class: measurement
      unit_of_measurement: '%'
      device_class: humidity
  
  '''
# ---
# name: test_inventory[tests/fixtures/hvac-very-low.yaml]
  '''
  ---
  areas:
  - name: Family room
    id: family_room
  devices:
  - name: Family Room
    id: family_room
    area: family_room
    info:
      model: 1.0.0
      manufacturer: null
      sw_version: null
  entities:
  - name: Family Room
    id: climate.family_room
    area: family_room
    device: family_room
    state: cool
    attributes:
      hvac_modes:
      - 'off'
      - cool
      - heat
      - auto
      min_temp: '7'
      max_temp: '35'
      fan_modes:
      - low
      - high
      - 'off'
      current_temperature: '25'
      hvac_action: cooling
      supported_features:
      - climate.ClimateEntityFeature.TARGET_TEMPERATURE_RANGE
      - climate.ClimateEntityFeature.FAN_MODE
      - climate.ClimateEntityFeature.TURN_OFF
      - climate.ClimateEntityFeature.TURN_ON
  - name: Family Room Temperature
    id: sensor.family_room_temperature
    area: family_room
    device: family_room
    state: '25'
    attributes:
      state_class: measurement
      unit_of_measurement: "\xB0C"
      device_class: temperature
  - name: Family Room Humidity
    id: sensor.family_room_humidity
    area: family_room
    device: family_room
    state: '45'
    attributes:
      state_class: measurement
      unit_of_measurement: '%'
      device_class: humidity
  
  '''
# ---
# name: test_inventory[tests/fixtures/light-dimmable.yaml]
  '''
  ---
  areas:
  - name: Family Room
    id: family_room
  devices:
  - name: Family Room
    id: family_room
    area: family_room
  entities:
  - name: Family Room
    id: light.family_room
    area: family_room
    device: family_room
    state: 'on'
    attributes:
      supported_color_modes:
      - brightness
      color_mode: brightness
      brightness: '30'
      supported_features: []
  
  '''
# ---
# name: test_inventory[tests/fixtures/light-example.yaml]
  '''
  ---
  areas:
  - name: Family Room
    id: family_room
  devices:
  - name: Family Room
    id: family_room
    area: family_room
  entities:
  - name: Family Room
    id: light.family_room
    area: family_room
    device: family_room
    state: 'off'
    attributes:
      supported_color_modes:
      - onoff
      supported_features: []
  
  '''
# ---
# name: test_inventory[tests/fixtures/light-off.yaml]
  '''
  ---
  areas:
  - name: Family Room
    id: family_room
  devices:
  - name: Family Room
    id: family_room
    area: family_room
  entities:
  - name: Family Room
    id: light.family_room
    area: family_room
    device: family_room
    state: 'off'
    attributes:
      supported_color_modes:
      - onoff
      supported_features: []
  
  '''
# ---
# name: test_inventory[tests/fixtures/light-on.yaml]
  '''
  ---
  areas:
  - name: Family Room
    id: family_room
  devices:
  - name: Family Room
    id: family_room
    area: family_room
  entities:
  - name: Family Room
    id: light.family_room
    area: family_room
    device: family_room
    state: 'on'
    attributes:
      supported_color_modes:
      - onoff
      color_mode: onoff
      supported_features: []
  
  '''
# ---
# name: test_inventory[tests/fixtures/light-rgbw.yaml]
  '''
  ---
  areas:
  - name: Family Room
    id: family_room
  devices:
  - name: Family Room
    id: family_room
    area: family_room
  entities:
  - name: Family Room
    id: light.family_room
    area: family_room
    device: family_room
    state: 'off'
    attributes:
      supported_color_modes:
      - rgbw
      supported_features: []
  
  '''
# ---
# name: test_inventory[tests/fixtures/motion-sensor-example.yaml]
  '''
  ---
  areas:
  - name: Front Yard
    id: front_yard
  devices:
  - name: Front Yard Motion
    id: front_yard_motion
    area: front_yard
  entities:
  - name: Front Yard Motion
    id: binary_sensor.front_yard_motion
    area: front_yard
    device: front_yard_motion
    state: 'on'
    attributes:
      device_class: motion
  - name: Front Yard Motion Battery
    id: binary_sensor.front_yard_motion_battery
    area: front_yard
    device: front_yard_motion
    state: 'off'
    attributes:
      device_class: battery
  - name: Front Yard Motion Battery
    id: sensor.front_yard_motion_battery
    area: front_yard
    device: front_yard_motion
    state: '90'
    attributes:
      state_class: measurement
      unit_of_measurement: '%'
      device_class: battery
  
  '''
# ---
# name: test_inventory[tests/fixtures/smart-blinds-closed.yaml]
  '''
  ---
  areas:
  - name: Family Room
    id: family_room
  devices:
  - name: Left Shade
    id: left_shade
    area: family_room
  - name: Right Shade
    id: right_shade
    area: family_room
  entities:
  - name: Left Shade
    id: cover.left_shade
    area: family_room
    device: left_shade
    state: closed
    attributes:
      current_position: '0'
      device_class: blind
      supported_features:
      - cover.CoverEntityFeature.OPEN
      - cover.CoverEntityFeature.CLOSE
      - cover.CoverEntityFeature.SET_POSITION
  - name: Right Shade
    id: cover.right_shade
    area: family_room
    device: right_shade
    state: closed
    attributes:
      current_position: '0'
      device_class: blind
      supported_features:
      - cover.CoverEntityFeature.OPEN
      - cover.CoverEntityFeature.CLOSE
      - cover.CoverEntityFeature.SET_POSITION
  - name: Left Shade Battery
    id: sensor.left_shade_battery
    area: family_room
    device: left_shade
    state: '90'
    attributes:
      state_class: measurement
      unit_of_measurement: '%'
      device_class: battery
  - name: Right Shade Battery
    id: sensor.right_shade_battery
    area: family_room
    device: right_shade
    state: '90'
    attributes:
      state_class: measurement
      unit_of_measurement: '%'
      device_class: battery
  
  '''
# ---
# name: test_inventory[tests/fixtures/smart-blinds-example.yaml]
  '''
  ---
  areas:
  - name: Family Room
    id: family_room
  devices:
  - name: Left Shade
    id: left_shade
    area: family_room
  - name: Right Shade
    id: right_shade
    area: family_room
  entities:
  - name: Left Shade
    id: cover.left_shade
    area: family_room
    device: left_shade
    state: closed
    attributes:
      current_position: '0'
      device_class: blind
      supported_features:
      - cover.CoverEntityFeature.OPEN
      - cover.CoverEntityFeature.CLOSE
      - cover.CoverEntityFeature.SET_POSITION
  - name: Right Shade
    id: cover.right_shade
    area: family_room
    device: right_shade
    state: closed
    attributes:
      current_position: '0'
      device_class: blind
      supported_features:
      - cover.CoverEntityFeature.OPEN
      - cover.CoverEntityFeature.CLOSE
      - cover.CoverEntityFeature.SET_POSITION
  - name: Left Shade Battery
    id: sensor.left_shade_battery
    area: family_room
    device: left_shade
    state: '90'
    attributes:
      state_class: measurement
      unit_of_measurement: '%'
      device_class: battery
  - name: Right Shade Battery
    id: sensor.right_shade_battery
    area: family_room
    device: right_shade
    state: '90'
    attributes:
      state_class: measurement
      unit_of_measurement: '%'
      device_class: battery
  
  '''
# ---
# name: test_inventory[tests/fixtures/smart-blinds-open.yaml]
  '''
  ---
  areas:
  - name: Family Room
    id: family_room
  devices:
  - name: Left Shade
    id: left_shade
    area: family_room
  - name: Right Shade
    id: right_shade
    area: family_room
  entities:
  - name: Left Shade
    id: cover.left_shade
    area: family_room
    device: left_shade
    state: open
    attributes:
      current_position: '100'
      device_class: blind
      supported_features:
      - cover.CoverEntityFeature.OPEN
      - cover.CoverEntityFeature.CLOSE
      - cover.CoverEntityFeature.SET_POSITION
  - name: Right Shade
    id: cover.right_shade
    area: family_room
    device: right_shade
    state: closed
    attributes:
      current_position: '0'
      device_class: blind
      supported_features:
      - cover.CoverEntityFeature.OPEN
      - cover.CoverEntityFeature.CLOSE
      - cover.CoverEntityFeature.SET_POSITION
  - name: Left Shade Battery
    id: sensor.left_shade_battery
    area: family_room
    device: left_shade
    state: '90'
    attributes:
      state_class: measurement
      unit_of_measurement: '%'
      device_class: battery
  - name: Right Shade Battery
    id: sensor.right_shade_battery
    area: family_room
    device: right_shade
    state: '90'
    attributes:
      state_class: measurement
      unit_of_measurement: '%'
      device_class: battery
  
  '''
# ---
# name: test_inventory[tests/fixtures/smart-lock-example.yaml]
  '''
  ---
  areas:
  - name: Front door
    id: front_door
  devices:
  - name: Front Door Lock
    id: front_door_lock
    area: front_door
    info:
      model: Yale
      manufacturer: null
      sw_version: null
  entities:
  - name: Front Door Lock
    id: binary_sensor.front_door_lock
    area: front_door
    device: front_door_lock
    state: 'off'
    attributes:
      device_class: lock
  - name: Front Door Lock Tamper
    id: binary_sensor.front_door_lock_tamper
    area: front_door
    device: front_door_lock
    state: 'off'
    attributes:
      device_class: tamper
  - name: Front Door Lock Battery
    id: binary_sensor.front_door_lock_battery
    area: front_door
    device: front_door_lock
    state: 'off'
    attributes:
      device_class: battery
  - name: Front Door Lock
    id: lock.front_door_lock
    area: front_door
    device: front_door_lock
    state: locked
    attributes:
      supported_features: []
  - name: Front Door Lock Battery
    id: sensor.front_door_lock_battery
    area: front_door
    device: front_door_lock
    state: '90'
    attributes:
      state_class: measurement
      unit_of_measurement: '%'
      device_class: battery
  
  '''
# ---
# name: test_inventory[tests/fixtures/smart-lock-locked.yaml]
  '''
  ---
  areas:
  - name: Front door
    id: front_door
  devices:
  - name: Front Door Lock
    id: front_door_lock
    area: front_door
    info:
      model: Yale
      manufacturer: null
      sw_version: null
  entities:
  - name: Front Door Lock
    id: binary_sensor.front_door_lock
    area: front_door
    device: front_door_lock
    state: 'off'
    attributes:
      device_class: lock
  - name: Front Door Lock Tamper
    id: binary_sensor.front_door_lock_tamper
    area: front_door
    device: front_door_lock
    state: 'off'
    attributes:
      device_class: tamper
  - name: Front Door Lock Battery
    id: binary_sensor.front_door_lock_battery
    area: front_door
    device: front_door_lock
    state: 'off'
    attributes:
      device_class: battery
  - name: Front Door Lock
    id: lock.front_door_lock
    area: front_door
    device: front_door_lock
    state: locked
    attributes:
      supported_features: []
  - name: Front Door Lock Battery
    id: sensor.front_door_lock_battery
    area: front_door
    device: front_door_lock
    state: '90'
    attributes:
      state_class: measurement
      unit_of_measurement: '%'
      device_class: battery
  
  '''
# ---
# name: test_inventory[tests/fixtures/smart-lock-unlocked.yaml]
  '''
  ---
  areas:
  - name: Front door
    id: front_door
  devices:
  - name: Front Door Lock
    id: front_door_lock
    area: front_door
    info:
      model: Yale
      manufacturer: null
      sw_version: null
  entities:
  - name: Front Door Lock
    id: binary_sensor.front_door_lock
    area: front_door
    device: front_door_lock
    state: 'on'
    attributes:
      device_class: lock
  - name: Front Door Lock Tamper
    id: binary_sensor.front_door_lock_tamper
    area: front_door
    device: front_door_lock
    state: 'off'
    attributes:
      device_class: tamper
  - name: Front Door Lock Battery
    id: binary_sensor.front_door_lock_battery
    area: front_door
    device: front_door_lock
    state: 'off'
    attributes:
      device_class: battery
  - name: Front Door Lock
    id: lock.front_door_lock
    area: front_door
    device: front_door_lock
    state: unlocked
    attributes:
      supported_features: []
  - name: Front Door Lock Battery
    id: sensor.front_door_lock_battery
    area: front_door
    device: front_door_lock
    state: '90'
    attributes:
      state_class: measurement
      unit_of_measurement: '%'
      device_class: battery
  
  '''
# ---
# name: test_inventory[tests/fixtures/smart-plug-example.yaml]
  '''
  ---
  areas:
  - name: Family room
    id: family_room
  devices:
  - name: Floor Lamp
    id: floor_lamp
    area: family_room
    info:
      model: Wyze
      manufacturer: null
      sw_version: null
  entities:
  - name: Floor Lamp Energy
    id: sensor.floor_lamp_energy
    area: family_room
    device: floor_lamp
    state: '1'
    attributes:
      state_class: total_increasing
      unit_of_measurement: kWh
      device_class: energy
  - name: Floor Lamp
    id: switch.floor_lamp
    area: family_room
    device: floor_lamp
    state: 'off'
    attributes:
      device_class: outlet
  
  '''
# ---
# name: test_inventory[tests/fixtures/smart-speaker-example.yaml]
  '''
  ---
  areas:
  - name: Living Room
    id: living_room
  devices:
  - name: Smart Speaker
    id: smart_speaker
    area: living_room
    info:
      model: 4.5.1
      manufacturer: null
      sw_version: null
  entities:
  - name: Smart Speaker
    id: media_player.smart_speaker
    area: living_room
    device: smart_speaker
    state: playing
    attributes:
      volume_level: 1.0
      media_track: '0'
      device_class: speaker
      supported_features:
      - media_player.MediaPlayerEntityFeature.PAUSE
      - media_player.MediaPlayerEntityFeature.VOLUME_SET
      - media_player.MediaPlayerEntityFeature.VOLUME_MUTE
      - media_player.MediaPlayerEntityFeature.PREVIOUS_TRACK
      - media_player.MediaPlayerEntityFeature.NEXT_TRACK
      - media_player.MediaPlayerEntityFeature.TURN_ON
      - media_player.MediaPlayerEntityFeature.TURN_OFF
      - media_player.MediaPlayerEntityFeature.VOLUME_STEP
      - media_player.MediaPlayerEntityFeature.STOP
      - media_player.MediaPlayerEntityFeature.PLAY
  
  '''
# ---
# name: test_inventory[tests/fixtures/switch-example.yaml]
  '''
  ---
  areas:
  - name: Chicken Coop
    id: chicken_coop
  devices:
  - name: Smart Feeder
    id: smart_feeder
    area: chicken_coop
  entities:
  - name: Smart Feeder
    id: switch.smart_feeder
    area: chicken_coop
    device: smart_feeder
    state: 'off'
    attributes:
      device_class: switch
  
  '''
# ---
# name: test_inventory[tests/fixtures/todo-list-example.yaml]
  '''
  ---
  areas: []
  devices:
  - name: Tasks
    id: tasks
  entities:
  - name: Tasks
    id: todo.tasks
    device: tasks
    state: '0'
    attributes:
      supported_features:
      - todo.TodoListEntityFeature.CREATE_TODO_ITEM
      - todo.TodoListEntityFeature.DELETE_TODO_ITEM
  
  '''
# ---
# name: test_inventory[tests/fixtures/vacuum-example.yaml]
  '''
  ---
  areas:
  - name: Kitchen
    id: kitchen
  devices:
  - name: Robot Vacuum
    id: robot_vacuum
    area: kitchen
  entities:
  - name: Robot Vacuum
    id: vacuum.robot_vacuum
    area: kitchen
    device: robot_vacuum
    state: docked
    attributes:
      supported_features:
      - vacuum.VacuumEntityFeature.PAUSE
      - vacuum.VacuumEntityFeature.STOP
      - vacuum.VacuumEntityFeature.RETURN_HOME
      - vacuum.VacuumEntityFeature.STATE
      - vacuum.VacuumEntityFeature.START
  
  '''
# ---
# name: test_inventory[tests/fixtures/valve-example.yaml]
  '''
  ---
  areas:
  - name: Garden
    id: garden
  devices:
  - name: Back Yard Water Valve
    id: back_yard_water_valve
    area: garden
  entities:
  - name: Back Yard Water Valve Meter-reading
    id: sensor.back_yard_water_valve_meter_reading
    area: garden
    device: back_yard_water_valve
    state: '2000'
    attributes:
      state_class: total_increasing
      unit_of_measurement: "m\xB3"
      device_class: water
  - name: Back Yard Water Valve Battery
    id: sensor.back_yard_water_valve_battery
    area: garden
    device: back_yard_water_valve
    state: '75'
    attributes:
      state_class: measurement
      unit_of_measurement: '%'
      device_class: battery
  - name: Back Yard Water Valve
    id: valve.back_yard_water_valve
    area: garden
    device: back_yard_water_valve
    state: closed
    attributes:
      current_position: '0'
      supported_features:
      - valve.ValveEntityFeature.OPEN
      - valve.ValveEntityFeature.CLOSE
      - valve.ValveEntityFeature.SET_POSITION
  
  '''
# ---
# name: test_inventory[tests/fixtures/weather-example.yaml]
  '''
  ---
  areas: []
  devices:
  - name: Home
    id: home
    info:
      model: AccuWeather
      manufacturer: null
      sw_version: null
  entities:
  - name: Home
    id: weather.home
    device: home
    state: sunny
    attributes:
      temperature: 22.2
      temperature_unit: "\xB0C"
      humidity: '60'
      pressure_unit: hPa
      wind_speed: 8.05
      wind_speed_unit: km/h
      visibility_unit: km
      precipitation_unit: mm
      supported_features:
      - weather.WeatherEntityFeature.FORECAST_DAILY
      - weather.WeatherEntityFeature.FORECAST_HOURLY
      - weather.WeatherEntityFeature.FORECAST_TWICE_DAILY
  
  '''
# ---
# name: test_inventory[tests/fixtures/window-sensor-example.yaml]
  '''
  ---
  areas:
  - name: Family Room
    id: family_room
  devices:
  - name: Left Window Sensor
    id: left_window_sensor
    area: family_room
    info:
      model: Aqara
      manufacturer: null
      sw_version: null
  entities:
  - name: Left Window Sensor
    id: binary_sensor.left_window_sensor
    area: family_room
    device: left_window_sensor
    state: 'off'
    attributes:
      device_class: window
  - name: Left Window Sensor Battery
    id: binary_sensor.left_window_sensor_battery
    area: family_room
    device: left_window_sensor
    state: 'off'
    attributes:
      device_class: battery
  - name: Left Window Sensor Battery
    id: sensor.left_window_sensor_battery
    area: family_room
    device: left_window_sensor
    state: '90'
    attributes:
      state_class: measurement
      unit_of_measurement: '%'
      device_class: battery
  
  '''
# ---
